--- a/Pertemuan 5/Latihan/app/src/main/AndroidManifest.xml
+++ b/Pertemuan 5/Latihan/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pertemuan5">
 
     <application
@@ -10,7 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".puzzlehuruf"></activity>
+        <activity
+            android:name=".Menu4"
+            android:label="Latihan Menu 4">
+
+        </activity>
+        <activity
+            android:name=".puzzlehuruf">
+
+        </activity>
         <activity
             android:name=".Menu1"
             android:label="Latihan Menu 1" />
